== Release 5.3.0.?

    * Added: PIC12F683 8-pin.

    * Added: ESP8266. ANSIC compiler only.

    * Fixed: General variable name as Timer parameter, Issue #172

== Release 5.3.0.3

    * Fixed crash when save LD.

    * Fixed LDLANG_IT, Italian locale. Thank you very much, Claudio Birello.
      manual-it.txt updated.

== Release 5.3.0.2

    * Fixed flashMcu.bat and LIBRARIES_FOR ARM,AVR, PIC by Jose GILLES

    * Fixed LDLANG_IT, Italian locale. Thanks, Claudio Birello.

== Release 5.3.0.1

    * Fixed: Shift + 6 problem (insert rung before) #155

    * Fixed: Undoredo bug #160

    * Fixed: Cannot set a value greater than 0x7FFFFFFF in a variable of 4 bytes. #146

== Release 5.3.0.0

    * Added Release 5.2.0.a by Jose GILLES

    * LdMicro32 release 5.2
    http://cq.cx/ladder-forum.pl?action=viewthread&parent=8128&tt=1549645797

    * LdMicro32 on Github
    http://cq.cx/ladder-forum.pl?action=viewthread&parent=7956&tt=1548617794

== Release 4.4.4.0

    * Fixed: LDmicro closes unexpectedly #144

    * Fixed: Compile as Interpretable Byte Code fails with the error:
    "Must choose a target microcontroller before compiling" #141

    * Fixed: LDmicro compiles sketch for Arduino even if PIC MCU is selected  #101

    * Fixed: Cannot set a value greater than 0x7FFFFFFF in a variable of 4 bytes. #146

    * Fixed: In simulation mode when pressing an input, if not selected pin MCU, then LDmicro is closed. Issue #132

    * Fixed: The code generated by "Compile ANSIC" for the SRAND insyruction #133

    * Updated: Italian locale. Thanks, Claudio Birello.

    * Wiki: UART communication FAQ
    https://github.com/LDmicro/LDmicro/wiki/UART-communication-FAQ

    * Updated: The UART RECEIVE, UART SEND instructions can receive/send a more
    than one-byte length variables. "Number of bytes to transmit:" parameter
    must be less or equal to the size of the used variable. Value 1 byte is
    compatible with the previous LDmicro version.