@@ -468,8 +468,8 @@ McuIoPinInfo AvrAtmega8IoPinInfo28[] = {
     { 'B',  3, 17, "PB3 (MOSI / OC2)"   , 17, "11"  , 0, 0, 0, 0},
     { 'B',  4, 18, "PB4 (MISO)"         , 18, "12"  , 0, 0, 0, 0},
     { 'B',  5, 19, "PB5 (SCK)"          , 19, "13"  , 0, 0, 0, 0},
-//  { 'B',  6,  9, "PB6 (XTAL1 / TOSC1)",  9, ""    , 0, 0, 0, 0},
-//  { 'B',  7, 10, "PB7 (XTAL2 / TOSC2)", 10, ""    , 0, 0, 0, 0},
+    { 'B',  6,  9, "PB6 (XTAL1 / TOSC1)",  9, ""    , 0, 0, 0, 0},
+    { 'B',  7, 10, "PB7 (XTAL2 / TOSC2)", 10, ""    , 0, 0, 0, 0},
     { 'C',  0, 23, "PC0 (ADC0)"         , 23, "A0"  , 0, 0, 0, 0},
     { 'C',  1, 24, "PC1 (ADC1)"         , 24, "A1"  , 0, 0, 0, 0},
     { 'C',  2, 25, "PC2 (ADC2)"         , 25, "A2"  , 0, 0, 0, 0},
@@ -495,8 +495,8 @@ McuIoPinInfo AvrAtmega8IoPinInfo[] = {
     { 'B',  3, 17, "PB3 (MOSI / OC2)"   , 0, "", 0, 0, 0, 0},
     { 'B',  4, 18, "PB4 (MISO)"         , 0, "", 0, 0, 0, 0},
     { 'B',  5, 19, "PB5 (SCK)"          , 0, "", 0, 0, 0, 0},
-//  { 'B',  6,  9, "PB6 (XTAL1 / TOSC1)", 0, "", 0, 0, 0, 0},
-//  { 'B',  7, 10, "PB7 (XTAL2 / TOSC2)", 0, "", 0, 0, 0, 0},
+    { 'B',  6,  9, "PB6 (XTAL1 / TOSC1)", 0, "", 0, 0, 0, 0},
+    { 'B',  7, 10, "PB7 (XTAL2 / TOSC2)", 0, "", 0, 0, 0, 0},
     { 'C',  0, 23, "PC0 (ADC0)"         , 0, "", 0, 0, 0, 0},
     { 'C',  1, 24, "PC1 (ADC1)"         , 0, "", 0, 0, 0, 0},
     { 'C',  2, 25, "PC2 (ADC2)"         , 0, "", 0, 0, 0, 0},
@@ -531,8 +531,8 @@ McuIoPinInfo AvrAtmega328IoPinInfo[] = {
     { 'B',  5, 19, "PB5 (SCK / PCINT5)"          , 19, "13"         , 0, 0, 0, 0},
 //              7                                      VCC          , 0, 0, 0, 0
 //              8                                      GND          , 0, 0, 0, 0
-//  { 'B',  6,  9, "PB6 (PCINT6 / XTAL1 / TOSC1)",  9, "crystal"    , 0, 0, 0, 0},
-//  { 'B',  7, 10, "PB7 (PCINT7 / XTAL2 / TOSC2)", 10, "crystal"    , 0, 0, 0, 0},
+    { 'B',  6,  9, "PB6 (PCINT6 / XTAL1 / TOSC1)",  9, "crystal"    , 0, 0, 0, 0},
+    { 'B',  7, 10, "PB7 (PCINT7 / XTAL2 / TOSC2)", 10, "crystal"    , 0, 0, 0, 0},
 //             20                                     AVCC          , 0, 0, 0, 0
 //             21                                     AREF          , 0, 0, 0, 0
 //             22                                      GND          , 0, 0, 0, 0
